--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Don's Brain Farts
 author: Brandon Ho Soon Zhi
 email: szh19@ic.ac.uk
 description: >- # this means to ignore newlines until "baseurl:"
-  As the name suggests, this is a space for me to write about random things that I find interesting and/or important.
+  As the name suggests, this space is for me to write about random things that I find interesting and/or important. It is also to log experiences and snapshots of my life.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://bhsz.me" # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: don.hsz
